--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,115 @@
-/*# sourceMappingURL=index.css.map */
+* {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
+.body {
+  background-color: black;
+  position: relative;
+}
+.body .backgroundeImg {
+  width: 100%;
+}
+.body .backgrounde {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  opacity: 0.4;
+  background-color: black;
+  z-index: 1;
+}
+.body .btnContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 2;
+}
+.body .btnContainer .button {
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  border-radius: 20px;
+  opacity: 0.8;
+  border: none;
+  cursor: pointer;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.body .btnContainer .button::before {
+  text-align: center;
+  font-size: 30px;
+  content: "+";
+}
+.body .btnContainer .button .structureName {
+  display: none;
+  font-size: 19px;
+  overflow: hidden;
+}
+.body .btnContainer .activeBtn {
+  width: auto;
+  padding: 0px 16px;
+  opacity: 1;
+}
+.body .btnContainer .activeBtn::before {
+  transform: translateY(-10%);
+  content: "-";
+}
+.body .btnContainer .activeBtn .structureName {
+  margin-left: 10px;
+  display: block;
+}
+.body .btnContainer .blueBtn {
+  background-color: #3877EE;
+}
+.body .btnContainer .greenBtn {
+  background-color: #6ABF4B;
+}
+.body .btnContainer .Gr669 {
+  left: 27%;
+  top: 27%;
+}
+.body .btnContainer .Gr684 {
+  left: 74%;
+  top: 18%;
+}
+.body .btnContainer .Gr679 {
+  left: 59%;
+  top: 38%;
+}
+.body .btnContainer .Gr683 {
+  left: 75%;
+  top: 44%;
+}
+.body .btnContainer .Gr678 {
+  left: 35%;
+  top: 43%;
+}
+.body .btnContainer .Gr682 {
+  left: 56%;
+  top: 58%;
+}
+.body .btnContainer .Gr681 {
+  left: 68%;
+  top: 61%;
+}
+.body .btnContainer .Gr685 {
+  left: 87%;
+  top: 69%;
+}
+.body .btnContainer .Gr670 {
+  left: 24%;
+  top: 65%;
+}
+.body .btnContainer .Gr680 {
+  left: 61%;
+  top: 76%;
+}/*# sourceMappingURL=index.css.map */
