--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,11 +9,13 @@ body::-webkit-scrollbar {
 }
 
 .body {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
   background-color: black;
   position: relative;
-}
-.body .backgroundeImg {
-  width: 100%;
+  background-image: url(../img/background.png);
+  background-position: center;
 }
 .body .backgrounde {
   width: 100%;
@@ -36,13 +38,16 @@ body::-webkit-scrollbar {
   width: 40px;
   position: absolute;
   border-radius: 20px;
-  opacity: 0.8;
+  opacity: 0.7;
   border: none;
   cursor: pointer;
   color: white;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  transition: 0.8s ease color, 0.8s ease background-color;
+  top: 50%;
+  left: 50%;
 }
 .body .btnContainer .button::before {
   text-align: center;
@@ -53,6 +58,11 @@ body::-webkit-scrollbar {
   display: none;
   font-size: 19px;
   overflow: hidden;
+}
+.body .btnContainer .button:hover {
+  background-color: white;
+  opacity: 1;
+  color: rgb(85, 84, 84);
 }
 .body .btnContainer .activeBtn {
   width: auto;
@@ -74,42 +84,32 @@ body::-webkit-scrollbar {
   background-color: #6ABF4B;
 }
 .body .btnContainer .Gr669 {
-  left: 27%;
-  top: 27%;
+  transform: translate(-470px, -250px);
 }
 .body .btnContainer .Gr684 {
-  left: 74%;
-  top: 18%;
+  transform: translate(410px, -330px);
 }
 .body .btnContainer .Gr679 {
-  left: 59%;
-  top: 38%;
+  transform: translate(170px, -130px);
 }
 .body .btnContainer .Gr683 {
-  left: 75%;
-  top: 44%;
+  transform: translate(460px, -70px);
 }
 .body .btnContainer .Gr678 {
-  left: 35%;
-  top: 43%;
+  transform: translate(-290px, -50px);
 }
 .body .btnContainer .Gr682 {
-  left: 56%;
-  top: 58%;
+  transform: translate(120px, 90px);
 }
 .body .btnContainer .Gr681 {
-  left: 68%;
-  top: 61%;
+  transform: translate(340px, 130px);
 }
 .body .btnContainer .Gr685 {
-  left: 87%;
-  top: 69%;
+  transform: translate(710px, 220px);
 }
 .body .btnContainer .Gr670 {
-  left: 24%;
-  top: 65%;
+  transform: translate(-510px, 170px);
 }
 .body .btnContainer .Gr680 {
-  left: 61%;
-  top: 76%;
+  transform: translate(210px, 290px);
 }/*# sourceMappingURL=index.css.map */
