--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -9,13 +9,13 @@ body::-webkit-scrollbar {
 }
 
 .body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     position: relative;
-
-    .backgroundeImg {
-        width: 100%;
-    }
-
+    background-image: url(../img/background.png);
+    background-position: center;
     .backgrounde {
         width: 100%;
         height: 100%;
@@ -38,13 +38,16 @@ body::-webkit-scrollbar {
             width: 40px;
             position: absolute;
             border-radius: 20px;
-            opacity: 0.8;
+            opacity: 0.7;
             border: none;
             cursor: pointer;
             color: white;
             display: flex;
             align-items: center;
             justify-content: space-evenly;
+            transition: .8s ease color, .8s ease background-color;
+            top: 50%;
+            left: 50%;
 
             &::before {
                 text-align: center;
@@ -56,6 +59,12 @@ body::-webkit-scrollbar {
                 display: none;
                 font-size: 19px;
                 overflow: hidden;
+            }
+
+            &:hover {
+                background-color: white;
+                opacity: 1;
+                color: rgb(85, 84, 84);
             }
         }
 
@@ -87,55 +96,44 @@ body::-webkit-scrollbar {
 
         // #region BtnPlacement
         .Gr669 {
-            left: 27%;
-            top: 27%;
+            transform: translate(-470px, - 250px);
         }
 
         .Gr684 {
-            left: 74%;
-            top: 18%;
+            transform: translate(410px, -330px);
         }
 
         .Gr679 {
-            left: 59%;
-            top: 38%;
+            transform: translate(170px, -130px);
         }
 
         .Gr683 {
-            left: 75%;
-            top: 44%;
+            transform: translate(460px, -70px);
         }
 
         .Gr678 {
-            left: 35%;
-            top: 43%
+            transform: translate(-290px, -50px);
         }
 
         .Gr682 {
-            left: 56%;
-            top: 58%;
+            transform: translate(120px, 90px);
         }
 
         .Gr681 {
-            left: 68%;
-            top: 61%;
+            transform: translate(340px, 130px);
         }
 
         .Gr685 {
-            left: 87%;
-            top: 69%;
+            transform: translate(710px, 220px);
         }
 
         .Gr670 {
-            left: 24%;
-            top: 65%;
+            transform: translate(-510px, 170px);
         }
 
         .Gr680 {
-            left: 61%;
-            top: 76%
+            transform: translate(210px, 290px);
         }
-
         //#endregion
     }
 }
