--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,43 +1,31 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 }
 
-body::-webkit-scrollbar {
-  width: 0px;
-}
-
-.body {
-  overflow: hidden;
+.btnContainer {
   width: 100vw;
   height: 100vh;
-  background-color: black;
   position: relative;
   background-image: url(../img/background.png);
-  background-position: center;
+  background-size: 100% 100%;
+  position: absolute;
 }
-.body .backgrounde {
+.btnContainer::after {
+  content: "";
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
   opacity: 0.4;
   background-color: black;
-  z-index: 1;
 }
-.body .btnContainer {
-  width: 100%;
-  height: 100%;
+.btnContainer .button {
   position: absolute;
-  top: 0;
-  z-index: 2;
-}
-.body .btnContainer .button {
-  height: 40px;
-  width: 40px;
-  position: absolute;
+  padding: 5px 13px;
   border-radius: 20px;
+  z-index: 1;
   opacity: 0.7;
   border: none;
   cursor: pointer;
@@ -45,71 +33,108 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  transition: 0.8s ease color, 0.8s ease background-color;
-  top: 50%;
-  left: 50%;
+  transition: 0.8s ease color, 1.2s ease background-color;
 }
-.body .btnContainer .button::before {
+.btnContainer .button::before {
   text-align: center;
-  font-size: 30px;
+  font-size: 26px;
   content: "+";
 }
-.body .btnContainer .button .structureName {
-  display: none;
-  font-size: 19px;
+.btnContainer .button::after {
+  width: 0px;
   overflow: hidden;
+  text-align: center;
+  font-size: 17px;
 }
-.body .btnContainer .button:hover {
+.btnContainer .button:hover {
   background-color: white;
   opacity: 1;
   color: rgb(85, 84, 84);
 }
-.body .btnContainer .activeBtn {
-  width: auto;
-  padding: 0px 16px;
+.btnContainer .activeBtn {
   opacity: 1;
 }
-.body .btnContainer .activeBtn::before {
-  transform: translateY(-10%);
+.btnContainer .activeBtn::after {
+  width: auto;
+  margin-left: 8px;
+}
+.btnContainer .activeBtn::before {
   content: "-";
+  transform: translateY(-10%);
 }
-.body .btnContainer .activeBtn .structureName {
-  margin-left: 10px;
-  display: block;
-}
-.body .btnContainer .blueBtn {
+.btnContainer .blueBtn {
   background-color: #3877EE;
 }
-.body .btnContainer .greenBtn {
+.btnContainer .greenBtn {
   background-color: #6ABF4B;
 }
-.body .btnContainer .Gr669 {
-  transform: translate(-470px, -250px);
+.btnContainer .Gr669 {
+  left: 27%;
+  top: 26%;
 }
-.body .btnContainer .Gr684 {
-  transform: translate(410px, -330px);
+.btnContainer .Gr669::after {
+  content: "Спортзал";
 }
-.body .btnContainer .Gr679 {
-  transform: translate(170px, -130px);
+.btnContainer .Gr684 {
+  left: 71%;
+  top: 18%;
 }
-.body .btnContainer .Gr683 {
-  transform: translate(460px, -70px);
+.btnContainer .Gr684::after {
+  content: "Апортименты";
 }
-.body .btnContainer .Gr678 {
-  transform: translate(-290px, -50px);
+.btnContainer .Gr679 {
+  left: 59%;
+  top: 37%;
 }
-.body .btnContainer .Gr682 {
-  transform: translate(120px, 90px);
+.btnContainer .Gr679::after {
+  content: "Музей";
 }
-.body .btnContainer .Gr681 {
-  transform: translate(340px, 130px);
+.btnContainer .Gr683 {
+  left: 35%;
+  top: 43%;
 }
-.body .btnContainer .Gr685 {
-  transform: translate(710px, 220px);
+.btnContainer .Gr683::after {
+  content: "Выстовка";
 }
-.body .btnContainer .Gr670 {
-  transform: translate(-510px, 170px);
+.btnContainer .Gr678 {
+  left: 20%;
+  top: 68%;
 }
-.body .btnContainer .Gr680 {
-  transform: translate(210px, 290px);
+.btnContainer .Gr678::after {
+  content: "Берег";
+}
+.btnContainer .Gr682 {
+  left: 66%;
+  top: 62%;
+}
+.btnContainer .Gr682::after {
+  content: "Травматология";
+}
+.btnContainer .Gr681 {
+  left: 85%;
+  top: 69%;
+}
+.btnContainer .Gr681::after {
+  content: "Скорая";
+}
+.btnContainer .Gr685 {
+  left: 74%;
+  top: 43%;
+}
+.btnContainer .Gr685::after {
+  content: "Столовая";
+}
+.btnContainer .Gr670 {
+  left: 57%;
+  top: 73%;
+}
+.btnContainer .Gr670::after {
+  content: "Отель";
+}
+.btnContainer .Gr680 {
+  left: 55%;
+  top: 57%;
+}
+.btnContainer .Gr680::after {
+  content: "Остоновка";
 }/*# sourceMappingURL=index.css.map */
