--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -4,136 +4,171 @@
     margin: 0px;
 }
 
-body::-webkit-scrollbar {
-    width: 0px;
-}
 
-.body {
-    overflow: hidden;
+.btnContainer {
     width: 100vw;
     height: 100vh;
-    background-color: black;
     position: relative;
     background-image: url(../img/background.png);
-    background-position: center;
-    .backgrounde {
+    background-size: 100% 100%;
+
+    &::after {
+        content: "";
         width: 100%;
         height: 100%;
         position: absolute;
-        top: 0;
         opacity: 0.4;
-        background-color: black;
-        z-index: 1;
+            background-color: black;
     }
 
-    .btnContainer {
-        width: 100%;
-        height: 100%;
+    position: absolute;
+
+    .button {
         position: absolute;
-        top: 0;
-        z-index: 2;
+        padding: 5px 13px;
+        border-radius: 20px;
+        z-index: 1;
+        opacity: 0.7;
+        border: none;
+        cursor: pointer;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        transition: .8s ease color, 1.2s ease background-color;
 
-        .button {
-            height: 40px;
-            width: 40px;
-            position: absolute;
-            border-radius: 20px;
-            opacity: 0.7;
-            border: none;
-            cursor: pointer;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            transition: .8s ease color, .8s ease background-color;
-            top: 50%;
-            left: 50%;
-
-            &::before {
-                text-align: center;
-                font-size: 30px;
-                content: "+";
-            }
-
-            .structureName {
-                display: none;
-                font-size: 19px;
-                overflow: hidden;
-            }
-
-            &:hover {
-                background-color: white;
-                opacity: 1;
-                color: rgb(85, 84, 84);
-            }
+        &::before {
+            text-align: center;
+            font-size: 26px;
+            content: "+";
         }
 
-        .activeBtn {
+        &::after {
+            width: 0px;
+            overflow: hidden;
+            text-align: center;
+            font-size: 17px;
+        }
 
-            width: auto;
-            padding: 0px 16px;
+        &:hover {
+            background-color: white;
             opacity: 1;
-
-            &::before {
-                transform: translateY(-10%);
-                content: "-";
-            }
-
-            .structureName {
-                margin-left: 10px;
-                display: block;
-            }
+            color: rgb(85, 84, 84);
         }
-
-
-        .blueBtn {
-            background-color: #3877EE;
-        }
-
-        .greenBtn {
-            background-color: #6ABF4B;
-        }
-
-        // #region BtnPlacement
-        .Gr669 {
-            transform: translate(-470px, - 250px);
-        }
-
-        .Gr684 {
-            transform: translate(410px, -330px);
-        }
-
-        .Gr679 {
-            transform: translate(170px, -130px);
-        }
-
-        .Gr683 {
-            transform: translate(460px, -70px);
-        }
-
-        .Gr678 {
-            transform: translate(-290px, -50px);
-        }
-
-        .Gr682 {
-            transform: translate(120px, 90px);
-        }
-
-        .Gr681 {
-            transform: translate(340px, 130px);
-        }
-
-        .Gr685 {
-            transform: translate(710px, 220px);
-        }
-
-        .Gr670 {
-            transform: translate(-510px, 170px);
-        }
-
-        .Gr680 {
-            transform: translate(210px, 290px);
-        }
-        //#endregion
     }
+
+    .activeBtn {
+        opacity: 1;
+
+        &::after {
+            width: auto;
+            margin-left: 8px;
+        }
+
+        &::before {
+            content: "-";
+            transform: translateY(-10%);
+        }
+    }
+
+    .blueBtn {
+        background-color: #3877EE;
+    }
+
+    .greenBtn {
+        background-color: #6ABF4B;
+    }
+
+    // #region BtnPlacement
+    .Gr669 {
+        left: 27%;
+        top: 26%;
+
+        &::after {
+            content: "Спортзал";
+        }
+    }
+
+    .Gr684 {
+        left: 71%;
+        top: 18%;
+
+        &::after {
+            content: "Апортименты";
+        }
+    }
+
+    .Gr679 {
+        left: 59%;
+        top: 37%;
+
+        &::after {
+            content: "Музей";
+        }
+    }
+
+    .Gr683 {
+        left: 35%;
+        top: 43%;
+
+        &::after {
+            content: "Выстовка";
+        }
+    }
+
+    .Gr678 {
+        left: 20%;
+        top: 68%;
+
+        &::after {
+            content: "Берег";
+        }
+    }
+
+    .Gr682 {
+        left: 66%;
+        top: 62%;
+
+        &::after {
+            content: "Травматология";
+        }
+    }
+
+    .Gr681 {
+        left: 85%;
+        top: 69%;
+
+        &::after {
+            content: "Скорая";
+        }
+    }
+
+    .Gr685 {
+        left: 74%;
+        top: 43%;
+
+        &::after {
+            content: "Столовая";
+        }
+    }
+
+    .Gr670 {
+        left: 57%;
+        top: 73%;
+
+        &::after {
+            content: "Отель";
+        }
+    }
+
+    .Gr680 {
+        left: 55%;
+        top: 57%;
+
+        &::after {
+            content: "Остоновка";
+        }
+    }
+
+    //#endregion
 }
