--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -8,7 +8,6 @@
 .btnContainer {
     width: 100vw;
     height: 100vh;
-    position: relative;
     background-image: url(../img/background.png);
     background-size: 100% 100%;
 
@@ -20,8 +19,6 @@
         opacity: 0.4;
             background-color: black;
     }
-
-    position: absolute;
 
     .button {
         position: absolute;
@@ -94,7 +91,7 @@
         top: 18%;
 
         &::after {
-            content: "Апортименты";
+            content: "Апартаменты";
         }
     }
 
